syntax = "proto3";

option csharp_namespace = "PHP_SRePS_Backend";

import "item.proto";

package backend;
// The StockTake service definition.
service StockDef {
<<<<<<< HEAD

// Return all Stocks

=======
	// Return all Stocks
>>>>>>> 76ca9473530439e4493eb657e71df5be196dd9d1
	rpc GetAllStocks (HasChanged) returns (stream StockTake);

	// Get requested StockTake: 
	rpc GetStock     (Item)       returns (StockInfo);
	
	//Remove a quantity of stock 
	rpc ChangeStock  (StockTake)  returns (StockInfo);
	
}

// The return message that contains the sale information
message StockInfo {
	int32 stock = 1;
}
message StockTake {
	Item item =1;
	StockInfo info = 2;
}